# aleph-nought

./: Makefile  README.md  description.txt  pyproject.toml  requirements.txt
aleph_nought/: __init__.py  __main__.py  client.py  config.py  record_status.py  web_client.py
aleph_nought/oai/: __init__.py  client.py  constants.py  custom_types.py  definitions.py
aleph_nought/x/: __init__.py  client.py  custom_types.py  definitions.py
aleph_nought/z3950/: __init__.py  client.py  yaz_connectors.py
tests/: test_oai_client.py  test_x_client.py  test_z3950_client.py
