[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "aleph_nought"
version = "0.2.2"
authors = [
    {name = "Robert Randiak", email = "randiak@protonmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "lxml",
    "pydantic",
    "requests",
    "marcdantic @ git+https://github.com/moravianlibrary/marcdantic.git"
]
dynamic = ["description", "readme"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aleph_nought*"]

[tool.setuptools.dynamic]
description = {file = "description.txt"}
readme = {file = "README.md"}
